add with yargs(cmd)

--- a/package.json
+++ b/package.json
@@ -8,5 +8,10 @@
     "start": "node app"
   },
   "author": "Andhika Saputra",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "chalk": "^4.1.0",
+    "validator": "^13.9.0",
+    "yargs": "^17.7.2"
+  }
 }
